--- a/index.html
+++ b/index.html
@@ -1,32 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CTE Pathways</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <title>My Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+
     <header>
-        <h1>Welcome to CTE Pathways</h1>
-        <p>Discover your career options and educational pathways</p>
+        <div class="container">
+            <h1>My Website</h1>
+            <div class="menu-icon" onclick="toggleMenu()">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </div>
+            
+        </div>
     </header>
+
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Subpage 1</a></li>
+            <li><a href="#">Subpage 2</a></li>
+            <li><a href="#">Subpage 3</a></li>
+            <li><a href="#">Subpage 4</a></li>
+            <li><a href="#">Subpage 5</a></li>
+            <li><a href="#">Subpage 6</a></li>
+            <li><a href="#">Subpage 7</a></li>
+        </ul>
+    </nav>
+
     <div class="container">
-        <section class="career-info">
-            <h2 class="section-heading">Explore Nursing</h2>
-            <p>If you're interested in becoming a nurse, you'll need to follow a specific educational path. Here's how:</p>
-            <ol>
-                <li>Complete high school with a strong focus on science and biology courses.</li>
-                <li>Enroll in a nursing program at a college or university to earn a nursing degree.</li>
-                <li>Pass the licensing exam to become a registered nurse (RN).</li>
-            </ol>
-            <p>After high school, nurses have various career opportunities in hospitals, clinics, and other healthcare settings. The average salary for nurses varies depending on location and experience.</p>
-            <!-- Update the href attribute with your custom URL -->
-            <p>Ready to start your nursing journey? <a href="https://www.google.com/" class="cta-button">Learn More</a></p>
-        </section>
-
-        <!-- Add more career sections as needed -->
-
+        <h2>Welcome to My Website!</h2>
+        <p>This is the homepage content.</p>
     </div>
+
+    <script src="script.js"></script>
+
 </body>
+
 </html>
