Subpages set up and Nav bar moved

--- a/index.html
+++ b/index.html
@@ -18,20 +18,19 @@
                 <div class="bar"></div>
                 <div class="bar"></div>
             </div>
-            
         </div>
     </header>
 
-    <nav>
+    <nav class="side-nav">
         <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">Subpage 1</a></li>
-            <li><a href="#">Subpage 2</a></li>
-            <li><a href="#">Subpage 3</a></li>
-            <li><a href="#">Subpage 4</a></li>
-            <li><a href="#">Subpage 5</a></li>
-            <li><a href="#">Subpage 6</a></li>
-            <li><a href="#">Subpage 7</a></li>
+            <li><a href="subpages/arts.html">Arts</a></li>
+            <li><a href="subpages/business.html">Business</a></li>
+            <li><a href="subpages/engineering.html">Engineering</a></li>
+            <li><a href="subpages/health.html">Health</a></li>
+            <li><a href="subpages/hospitality.html">Hospitality</a></li>
+            <li><a href="subpages/ict.html">ICT</a></li>
+            <li><a href="subpages/manufacturing.html">Manufacturing</a></li>
         </ul>
     </nav>
 
