--- a/animation.html
+++ b/animation.html
@@ -12,7 +12,7 @@
 
     <header>
         <div class="container">
-            <h1>My Website</h1>
+            <h1>Animation</h1>
             <div class="menu-icon" onclick="toggleMenu()">
                 <div class="bar"></div>
                 <div class="bar"></div>
@@ -23,7 +23,7 @@
 
     <nav class="side-nav">
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="animation.html">Animation</a></li>
             <li><a href="arts.html">Design and Media Arts</a></li>
             <li><a href="graphics.html">Graphic Design</a></li>
@@ -44,12 +44,12 @@
             <p>Animation is the process of taking 3D models or drawings to create an illusion of sequential movement, usually taking 25-50 frames per secona to create a smoot, seamless motion. Industries that heavily use animation include film and TV, video game development, architecture, engineering, manufacturing and healthcare</p>
 
             <h2>Connects to Programs</h2>
-            <p>De Anza College (AA) <break>
-                Foothill College (AA) <break>
-                FresTo, Fellerton, Long <break>
-                Beach, San Jose <break>
-                UCLA <break>
-                CA College of the Arts <break>
+            <p>De Anza College (AA) <br>
+                Foothill College (AA) <br>
+                FresTo, Fellerton, Long <br>
+                Beach, San Jose <br>
+                UCLA <br>
+                CA College of the Arts <br>
                 Lovola Marymount</p>
         </div>
 
@@ -59,13 +59,13 @@
             <p>3D modelers build 3D objects and environments that are based on sketches or real-world objects using specialized computer software. Animators take 3D objects and bring them to life, giving them movement and animation using computer-generated imagery (CGI) software.</p>
 
             <h2>Leads to these jobs</h2>
-            <p>3D Modeler <break>
-                Animator <break>
-                Concept Artist <break>
-                Game Designer <break>
-                Graphic Designer <break>
-                Illustrator <break>
-                Multi-Media Artist <break>
+            <p>3D Modeler <br>
+                Animator <br>
+                Concept Artist <br>
+                Game Designer <br>
+                Graphic Designer <br>
+                Illustrator <br>
+                Multi-Media Artist <br>
                 Production Designer</p>
         </div>
         
