--- a/arts.html
+++ b/arts.html
@@ -12,7 +12,7 @@
 
     <header>
         <div class="container">
-            <h1>My Website</h1>
+            <h1>Design and Media Arts</h1>
             <div class="menu-icon" onclick="toggleMenu()">
                 <div class="bar"></div>
                 <div class="bar"></div>
@@ -23,7 +23,7 @@
 
     <nav class="side-nav">
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="animation.html">Animation</a></li>
             <li><a href="arts.html">Design and Media Arts</a></li>
             <li><a href="graphics.html">Graphic Design</a></li>
@@ -44,11 +44,11 @@
             <p>Design, visual and media arts can help you take your creative talent, combine it with skills and technology, and turn you in to an in-demand multimedia or graphic designer. Multimedia design involves computers, animation, photography, video and printing, creating all sorts of things from posters and magazines, to websites and online video games, to photos and videos.</p>
 
             <h2>Connects to Programs</h2>
-            <p>De Anza College (AA) <break>
-                Foothill College (AA) <break>
-                Fullerton State <break>
-                UC Irvine <break>
-                UCLA <break>
+            <p>De Anza College (AA) <br>
+                Foothill College (AA) <br>
+                Fullerton State <br>
+                UC Irvine <br>
+                UCLA <br>
                 UC San Diego</p>
         </div>
 
@@ -58,14 +58,14 @@
             <p>Design, visual and media arts professionals work in the entertainment, video game, or advertising industries, or "in-house" at a traditional business. Animators create visuals for computer programs or games. Marketing departments design artwork and campaigns for presentations or marketing materials. Graphic designers create designs for print, video, and online applications.</p>
 
             <h2>Leads to these jobs</h2>
-            <p>2D & 3D Animator <break>
-                Creative Director <break>
-                Desktop Publisher <break>
-                Digital Media Designer <break>
-                Filmmaker <break>
-                Graphic Designer <break>
-                Marketing Specialist <break>
-                Photographer <break>
+            <p>2D & 3D Animator <br>
+                Creative Director <br>
+                Desktop Publisher <br>
+                Digital Media Designer <br>
+                Filmmaker <br>
+                Graphic Designer <br>
+                Marketing Specialist <br>
+                Photographer <br>
                 Social Media Manager</p>
         </div>
         
