--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <header>
         <div class="container">
-            <h1>My Website</h1>
+            <h1>Home</h1>
             <div class="menu-icon" onclick="toggleMenu()">
                 <div class="bar"></div>
                 <div class="bar"></div>
@@ -23,7 +23,7 @@
 
     <nav class="side-nav">
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="animation.html">Animation</a></li>
             <li><a href="arts.html">Design and Media Arts</a></li>
             <li><a href="graphics.html">Graphic Design</a></li>
