--- a/hospitality.html
+++ b/hospitality.html
@@ -23,7 +23,7 @@
 
     <nav class="side-nav">
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="animation.html">Animation</a></li>
             <li><a href="arts.html">Design and Media Arts</a></li>
             <li><a href="graphics.html">Graphic Design</a></li>
