Sidebar fix and Home Page Information

--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
         </ul>
     </nav>
 
+    <div class="container">
+        <h2>WHAT IS CTE?</h2>
+        <p>Career Technical Education classes give students an opportunity to explore specific career pathways while discovering the real-world application of the knowledge and skills learned in core subjects. Career Technical Education classes also deeply expose students in practical skills, problem solving, creativity, and team building. These "soft" skills are the skills the current job market and industry demands of future applicants to be competitive in today's global workplace. In Career Technical Education classes, students use math to design buildings, build sets, build robots, and create code. They use artistic skills to prepare meals, design cities, create graphics, web designs and presentations from films to theater productions.  They use reading and writing skills to produce multimedia publications, evaluate architectural styles, and develop storylines for student-produced videos. They use science to solve ecological problems and plan sustainable cities and resources of the future. They study history, and use what we have learned from our past, to plan for our future.  Career and Technical Education classes are the future. One size does not fit all, and we have to answer the demand of our community and industry to produce the job force that is needed in the 21st century. While many of our Career Technical Education programs may provide students options for entry level employment, most students complete Career Technical Education courses with an understanding of the next steps they need to take on their career paths, whether it is continuing on to college for a degree or job-related certificate or applying to local apprenticeship programs where they can master a craft as they earn a living.</p>
 
+    </div>
 
     <script src="script.js"></script>
 
