mpa to spa first change 3/8/24
made info.txt, file reader

--- a/architecture.html
+++ b/architecture.html
@@ -52,8 +52,7 @@
                 UCLA <br>
                 Academy of Art Univ. <br>
                 Cal Poly <br>
-                Southern CA Institute of <br>
-                Architecture</p>
+                Southern CA Institute of Architecture</p>
         </div>
 
         <div id="right">
