--- a/template.html
+++ b/template.html
@@ -23,19 +23,19 @@
 
     <nav class="side-nav">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="animation.html">Animation</a></li>
-            <li><a href="arts.html">Design and Media Arts</a></li>
-            <li><a href="graphics.html">Graphic Design</a></li>
-            <li><a href="film.html">Film and Video Production</a></li>
-            <li><a href="business.html">Business</a></li>
-            <li><a href="architecture.html">Architecture</a></li>
-            <li><a href="engineering.html">Engineering</a></li>
-            <li><a href="health.html">Health</a></li>
-            <li><a href="hospitality.html">Hospitality</a></li>
-            <li><a href="games.html">Games and Simulation</a></li>
-            <li><a href="software.html">Software Development</a></li>
-            <li><a href="manufacturing.html">Manufacturing</a></li>
+            <li><a href="#" onclick="displayInfo('Home')">Home</a></li>
+            <li><a href="#" onclick="displayInfo('Animation')">Animation</a></li>
+            <li><a href="#" onclick="displayInfo('Design and Media Arts')">Design and Media Arts</a></li>
+            <li><a href="#" onclick="displayInfo('Graphic Design')">Graphic Design</a></li>
+            <li><a href="#" onclick="displayInfo('Film and Video Production')">Film and Video Production</a></li>
+            <li><a href="#" onclick="displayInfo('Business')">Business</a></li>
+            <li><a href="#" onclick="displayInfo('Architecture')">Architecture</a></li>
+            <li><a href="#" onclick="displayInfo('Engineering')">Engineering</a></li>
+            <li><a href="#" onclick="displayInfo('Health')">Health</a></li>
+            <li><a href="#" onclick="displayInfo('Hospitality')">Hospitality</a></li>
+            <li><a href="#" onclick="displayInfo('Games and Simulation')">Games and Simulation</a></li>
+            <li><a href="#" onclick="displayInfo('Software Development')">Software Development</a></li>
+            <li><a href="#" onclick="displayInfo('Manufacturing')">Manufacturing</a></li>
         </ul>
     </nav>
     <div class="container">
