Single Page Application Working

--- a/template.html
+++ b/template.html
@@ -39,7 +39,7 @@
         </ul>
     </nav>
     <div class="container">
-        <div id="left">
+        <div id="left-content">
             <h2>What is it?</h2>
             <p>This is the "What is it?" content.</p>
 
@@ -47,12 +47,10 @@
             <p>This is the "Connects to Programs" content.</p>
         </div>
 
-        <div id="right">
+        <div id="right-content">
             
             <h2>What will I do?</h2>
             <p>This is the "What will I do?" content.</p>
-
-            
 
             <h2>Leads to these jobs</h2>
             <p>This is the "Leads to these jobs" content.</p>
