--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container mx-auto flex">
         <nav class="w-1/4 py-8">
             <ul class="space-y-4">
-                <li><a href="pathways.html" class="block px-4 py-2 rounded-lg hover:bg-gray-200">Home</a></li>
+                <li><a href="" class="block px-4 py-2 rounded-lg hover:bg-gray-200">Home</a></li>
                 <li><a href="pathways.html" class="block px-4 py-2 rounded-lg hover:bg-gray-200">Animation</a></li>
                 <li><a href="pathways.html" class="block px-4 py-2 rounded-lg hover:bg-gray-200">Design and Media Arts</a></li>
                 <li><a href="pathways.html" class="block px-4 py-2 rounded-lg hover:bg-gray-200">Graphic Design</a></li>
@@ -35,7 +35,11 @@
             <div class="grid grid-cols-1 gap-8">
                 <div id="top-content" class="border rounded-lg p-4 bg-white">
                     <h2 class="text-xl font-semibold mb-4">Welcome to CTE Pathways</h2>
-                    <p>This is the homepage content.</p>
+                    <p>Career Technical Education (CTE) at MVLA provides career and workforce preparation for all students. Through CTE, high school students gain valuable career and technical education so they can:<br>
+                            <p class = "mx-10">enter the workforce with skills and competencies to be successful</p>
+                            <p class = "mx-10" >pursue advanced training in postsecondary educational institutions</p>
+                            <p class = "mx-10" >upgrade existing skills and knowledge</p>
+                    </p>
                 </div>
                 <div id="bottom-content" class="border rounded-lg p-4 bg-white">
                     <h2 class="text-xl font-semibold mb-4">Learn more about Career and Technical Education</h2>
