--- a/pathways.html
+++ b/pathways.html
@@ -49,6 +49,8 @@
                     <h2 class="text-xl font-semibold mb-4">Jobs it connects to</h2>
                     <p>Long content here...</p>
                 </div>
+                <div class="col-span-2">
+                </div>
             </div>
         </div>
     </div>
