Small progress integrating home page to same html file.

--- a/pathways.html
+++ b/pathways.html
@@ -14,7 +14,7 @@
     <div class="container mx-auto flex">
         <nav class="w-1/4 py-8">
             <ul class="space-y-4">
-                <li><a href="index.html" class="block px-4 py-2 rounded-lg hover:bg-gray-200">Home</a></li>
+                <li><a href="#" onclick="displayInfo('Home')" class="block px-4 py-2 rounded-lg hover:bg-gray-200">Home</a></li>
                 <li><a href="#" onclick="displayInfo('Animation')" class="block px-4 py-2 rounded-lg hover:bg-gray-200">Animation</a></li>
                 <li><a href="#" onclick="displayInfo('Design and Media Arts')" class="block px-4 py-2 rounded-lg hover:bg-gray-200">Design and Media Arts</a></li>
                 <li><a href="#" onclick="displayInfo('Graphic Design')" class="block px-4 py-2 rounded-lg hover:bg-gray-200">Graphic Design</a></li>
