--- a/pathways.html
+++ b/pathways.html
@@ -31,7 +31,7 @@
         </nav>
 
         <div class="w-3/4 px-8 py-8 scrollbar-thin scrollbar-thumb-gray-300 scrollbar-track-gray-100">
-            <h1 class="text-3xl font-semibold mb-8">CTE Pathways</h1>
+            <h1 id="title" class="text-3xl font-semibold mb-8">CTE Pathways</h1>
             <div class="grid grid-cols-2 gap-8">
                 <div id="top-left-content" class="border rounded-lg p-4 bg-white max-h-64 overflow-auto">
                     <h2 class="text-xl font-semibold mb-4">What is it?</h2>
