small small change
added hyphens? not really important

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                 <div id="top-content" class="border rounded-lg p-4 bg-white">
                     <h2 class="text-xl font-semibold mb-4">Welcome to CTE Pathways</h2>
                     <p>Career Technical Education (CTE) at MVLA provides career and workforce preparation for all students. Through CTE, high school students gain valuable career and technical education so they can:<br>
-                            <p class = "mx-10">enter the workforce with skills and competencies to be successful</p>
-                            <p class = "mx-10" >pursue advanced training in postsecondary educational institutions</p>
-                            <p class = "mx-10" >upgrade existing skills and knowledge</p>
+                            <p class = "mx-10">- enter the workforce with skills and competencies to be successful</p>
+                            <p class = "mx-10" >- pursue advanced training in postsecondary educational institutions</p>
+                            <p class = "mx-10" >- upgrade existing skills and knowledge</p>
                     </p>
                 </div>
                 <div id="bottom-content" class="border rounded-lg p-4 bg-white">
