--- a/index.html
+++ b/index.html
@@ -15,18 +15,7 @@
         <nav class="w-1/4 py-8">
             <ul class="space-y-4">
                 <li><a href="" class="block px-4 py-2 rounded-lg hover:bg-gray-200">Home</a></li>
-                <li><a href="pathways.html" class="block px-4 py-2 rounded-lg hover:bg-gray-200">Animation</a></li>
-                <li><a href="pathways.html" class="block px-4 py-2 rounded-lg hover:bg-gray-200">Design and Media Arts</a></li>
-                <li><a href="pathways.html" class="block px-4 py-2 rounded-lg hover:bg-gray-200">Graphic Design</a></li>
-                <li><a href="pathways.html" class="block px-4 py-2 rounded-lg hover:bg-gray-200">Film and Video Production</a></li>
-                <li><a href="pathways.html" class="block px-4 py-2 rounded-lg hover:bg-gray-200">Business</a></li>
-                <li><a href="pathways.html" class="block px-4 py-2 rounded-lg hover:bg-gray-200">Architecture</a></li>
-                <li><a href="pathways.html" class="block px-4 py-2 rounded-lg hover:bg-gray-200">Engineering</a></li>
-                <li><a href="pathways.html" class="block px-4 py-2 rounded-lg hover:bg-gray-200">Health</a></li>
-                <li><a href="pathways.html" class="block px-4 py-2 rounded-lg hover:bg-gray-200">Hospitality</a></li>
-                <li><a href="pathways.html" class="block px-4 py-2 rounded-lg hover:bg-gray-200">Games and Simulation</a></li>
-                <li><a href="pathways.html" class="block px-4 py-2 rounded-lg hover:bg-gray-200">Software Development</a></li>
-                <li><a href="pathways.html" class="block px-4 py-2 rounded-lg hover:bg-gray-200">Manufacturing</a></li>
+                <li><a href="pathways.html" class="block px-4 py-2 rounded-lg hover:bg-gray-200">Pathways</a></li>
             </ul>
         </nav>
 
@@ -34,7 +23,7 @@
             <h1 class="text-3xl font-semibold mb-8">CTE Pathways</h1>
             <div class="grid grid-cols-1 gap-8">
                 <div id="top-content" class="border rounded-lg p-4 bg-white">
-                    <h2 class="text-xl font-semibold mb-4">Welcome to CTE Pathways</h2>
+                    <h2 class="text-xl font-semibold mb-4">Welcome to CTE Pathways!</h2>
                     <p>Career Technical Education (CTE) at MVLA provides career and workforce preparation for all students. Through CTE, high school students gain valuable career and technical education so they can:<br>
                             <p class = "mx-10">- enter the workforce with skills and competencies to be successful</p>
                             <p class = "mx-10" >- pursue advanced training in postsecondary educational institutions</p>
@@ -45,7 +34,11 @@
                     <h2 class="text-xl font-semibold mb-4">Learn more about Career and Technical Education</h2>
                     <p>Content here</p>
                 </div>
+                <div id="pathway-image" class="border rounded-lg p-2 bg-white">
+                    <img src = "image.png">
+                </div>
             </div>
+            
         </div>
     </div>
 </body>
